# Expt_ShortenSum

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/url_lists/: readme
data_utils/: bpe_preprocess.sh  get_xsum.py  make_datafiles.py  make_oracle_length_data.py  rename_weights_for_extractor.py  rename_weights_for_proposal.py  split_data_by_length.py
llm_sum/: infer_and_eval_openai.py  pyproject.toml
notebooks/: Untitled.ipynb  analyze_length.ipynb  analyze_weights.ipynb  check_gpu.ipynb  data_analysis.ipynb  get_dataset.ipynb  test_modeling.ipynb  test_sent_vec.ipynb
train/: finetune.py  finetune_no_trainer.py  gpu_profile.py  modeling_pegasus.py  modeling_proposal.py  my_finetune.py  utils.py
train_fairseq/: __init__.py  bart.py  bart_with_extractor.py  differentiable_topk.py  export_topk_tokens.py  generate.py  generate_with_desired_length.py  generate_with_enlighten_indices.py  generate_with_fixed_length.py  language_pair_with_tgt_length_dataset.py  my_hub_interface.py  mytask.py  mytrainer.py  params_tuner.py  prepare_enlighten_missed_tokens.py  sequence_generator.py  soft_topk_attention.py  train.py
